--- a/Scripts/tsconfig.json
+++ b/Scripts/tsconfig.json
@@ -5,7 +5,8 @@
     "removeComments": false,
     "sourceMap": true,
     "target": "es5",
-    "outDir": "../wwwroot/ts/"
+    "outDir": "../wwwroot/ts/",
+    "jsx": "react"
   },
   "compileOnSave": true,
   "exclude": [
